Basic page structure

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "history": "^4.6.3",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
