--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^15.6.1",
     "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.6",
+    "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
     "redux": "^3.7.2",
