--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
