--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-test-renderer": "^15.6.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
