--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.1",
     "enzyme-to-json": "^3.1.0",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "redux-mock-store": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
