--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.1",
     "enzyme-to-json": "^3.1.0",
+    "jest-localstorage-mock": "^2.0.1",
     "react-scripts": "1.0.11",
     "redux-mock-store": "^1.3.0"
   },
