--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
       "src/**/*.{js,jsx}",
       "!node_modules/",
       "!src/index.js",
+      "!src/store.js",
       "!src/registerServiceWorker.js",
       "!src/containers/app/index.js"
     ]
