--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "^16.1.1",
     "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.1.1",
     "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "next",
-    "react-test-renderer": "^15.6.2",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-test-renderer": "^16.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-15": "^1.0.1",
+    "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.1.0",
     "jest-localstorage-mock": "^2.0.1",
     "react-scripts": "1.0.17",
